brat/test/golden/error/pass.brat.golden
Error in test/golden/error/pass.brat on line 5:
f = { .., (x => x) }
           ^

  Nothing to bind to: x

